--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
-    margin-top: 100px;
+    margin: 100px;
 }
 
 .photographer_section article {
@@ -37,14 +37,72 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin: 10px 0 0 0;
+}
+
+.photographer_section article h3 {
+    color: #901C1C;
+    font-size: 13px;
+    line-height: 17px;
+    margin: 0 0 5px 0;
+}
+
+.photographer_section article h4 {
+    font-size: 10px;
+    line-height: 13px;
+    margin: 0 0 5px 0;
+}
+
+.photographer_section article h5 {
+    font-size: 9px;
+    line-height: 12px;
+    color: #757575;
+    margin: 0
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 992px) {
+    .photographer_section {
+        margin: 100px 0;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .photographer_section {
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
+    }
+    header {
+        padding: 20px 40px;
+    }
+    header h1, header .logo {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .photographer_section {
+        grid-template-columns: 1fr;
+        gap: 30px;
+        margin: 50px 0;
+    }
+
+    header {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
 }
