--- a/css/photographer.css
+++ b/css/photographer.css
@@ -6,6 +6,43 @@
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: 1fr .5fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.photograph-header>div {
+    justify-self: self-start;
+}
+
+
+.photograph-header .photographer-image {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    justify-self: self-end;
+}
+
+.photograph-header h1 {
+    font-size: 64px;
+    line-height: 64px;
+    color: #D3573C;
+    margin: 0;
+}
+
+.photograph-header>div {
+    font-size: 24px;
+    line-height: 31px;
+    color: #901C1C;
+}
+
+.photograph-header>div>span {
+    font-size: 18px;
+    line-height: 23px;
+    color: #525252;
 }
 
 .contact_button {
@@ -19,6 +56,42 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.photograph-medias {
+    margin: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 95px;
+    grid-row-gap: 30px;
+}
+
+.photograph-medias article .media-item {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.photograph-medias article .media-infos {
+    display: flex;
+    justify-content: space-between;
+    color: #901C1C;
+    font-size: 24px;
+    line-height: 31px;
+    padding-top: 10px;
+}
+
+.photograph-medias article .media-infos span {
+    width: calc(100% - 70px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.photograph-medias article .media-infos img {
+    width: 20px;
+    height: 20px;
 }
 
 .modal {
@@ -73,4 +146,17 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+
+.sticky {
+    background: #DB8876;
+    position: fixed;
+    bottom: 0;
+    right: 30px;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 5px 5px 0 0;
+    font-size: 24px;
+    line-height: 31px;
 }
