--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,14 +1,3 @@
-#contact_modal {
-    display: none;
-    background: rgba(0, 0, 0, .3);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-}
-
 .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
@@ -72,8 +61,14 @@
     grid-row-gap: 30px;
 }
 
-.photograph-medias article .media, .photograph-medias article .media-infos .heart {
+.photograph-medias article button {
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    color: #901C1C;
+    font-size: 24px;
     cursor: pointer;
+    width: 100%;
 }
 
 .photograph-medias article .media-item {
@@ -100,6 +95,10 @@
     white-space: nowrap;
 }
 
+.photograph-medias article .media-infos button {
+    width: initial;
+}
+
 .photograph-medias article .media-infos img {
     width: 20px;
     height: 20px;
@@ -114,6 +113,17 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+}
+
+#contact_modal {
+    display: none;
+    background: rgba(0, 0, 0, .3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
 }
 
 .modal header {
@@ -133,6 +143,12 @@
     font-weight: normal;
     line-height: 1;
     margin: 0;
+}
+
+#contact_modal header button {
+    background: transparent;
+    border: none;
+    padding: 0;
 }
 
 form {
@@ -204,6 +220,9 @@ form .contact_button {
     position: relative;
     width: 170px;
     height: 55px;
+    border: none;
+    background: none;
+    padding: 0;
 }
 
 .sort .dropdown::before {
@@ -226,7 +245,7 @@ form .contact_button {
     transform: rotate(-225deg);
 }
 
-.sort .dropdown input {
+.sort .dropdown .text-box {
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -238,10 +257,8 @@ form .contact_button {
     padding: 12px 20px;
     border-radius: 5px;
     font-size: 18px;
-}
-
-.sort .dropdown .text-box::placeholder {
-    color: #FFFFFF;
+    line-height: 31px;
+    text-align: left;
 }
 
 .sort .dropdown .options {
@@ -261,10 +278,12 @@ form .contact_button {
     padding: 10px 10px 0 10px;
 }
 
-.sort .dropdown .options div {
+.sort .dropdown .options a {
+    display: block;
+    text-align: left;
     padding: 20px 10px;
     cursor: pointer;
-    font-weight: 700;
     font-size: 18px;
     border-top: 1px solid #FFFFFF;
+    color: #FFFFFF;
 }
